# micacontrol

./: README.md  control_micasense.py
data/: IMG_0000_BGR.tif  IMG_0000_detectedBGR.tif  IMG_0001_BGR.tif  IMG_0001_detectedBGR.tif  IMG_0003_BGR.tif  IMG_0003_detectedBGR.tif  IMG_0005_BGR.tif  IMG_0005_detectedBGR-1.tif  IMG_0005_detectedBGR.tif  IMG_0006_BGR.tif  IMG_0006_detectedBGR.tif  IMG_0008_BGR.tif  IMG_0008_detectedBGR.tif  IMG_0009_BGR.tif  IMG_0009_detectedBGR.tif  IMG_0010_BGR.tif  IMG_0010_detectedBGR.tif  IMG_0011_BGR.tif  IMG_0011_detectedBGR.tif  IMG_0022_BGR.tif  IMG_0022_detectedBGR.tif  IMG_0036_BGR.tif  IMG_0036_detectedBGR.tif  IMG_0075_BGR.tif  IMG_0075_detectedBGR.tif  IMG_0095_BGR.tif  IMG_0095_detected.tif  IMG_0095_detectedBGR.tif  IMG_0096_BGR.tif  IMG_0096_detected.tif  IMG_0096_detectedBGR.tif
micasense_ros/: CMakeLists.txt  package.xml
micasense_ros/msg/: Multispectral.msg
micasense_ros/scripts/: micasense_control.py  micasense_image_processor.py  micasense_image_processor_viewer.py  micasense_viewer.py
test_pics/0007SET/000/: IMG_0013_1.tif  IMG_0013_2.tif  IMG_0013_3.tif  IMG_0013_4.tif  IMG_0013_5.tif  IMG_0014_1.tif  IMG_0014_2.tif  IMG_0014_3.tif  IMG_0014_4.tif  IMG_0014_5.tif  IMG_0036_1.tif  IMG_0036_2.tif  IMG_0036_3.tif  IMG_0036_4.tif  IMG_0036_5.tif  IMG_0037_1.tif  IMG_0037_2.tif  IMG_0037_3.tif  IMG_0037_4.tif  IMG_0037_5.tif
test_pics/0011SET/000/: IMG_0000_1.tif  IMG_0000_2.tif  IMG_0000_3.tif  IMG_0000_4.tif  IMG_0000_5.tif  IMG_0001_1.tif  IMG_0001_2.tif  IMG_0001_3.tif  IMG_0001_4.tif  IMG_0001_5.tif  IMG_0003_1.tif  IMG_0003_2.tif  IMG_0003_3.tif  IMG_0003_4.tif  IMG_0003_5.tif  IMG_0005_1.tif  IMG_0005_2.tif  IMG_0005_3.tif  IMG_0005_4.tif  IMG_0005_5.tif  IMG_0006_1.tif  IMG_0006_2.tif  IMG_0006_3.tif  IMG_0006_4.tif  IMG_0006_5.tif  IMG_0009_1.tif  IMG_0009_2.tif  IMG_0009_3.tif  IMG_0009_4.tif  IMG_0009_5.tif  IMG_0010_1.tif  IMG_0010_2.tif  IMG_0010_3.tif  IMG_0010_4.tif  IMG_0010_5.tif  IMG_0011_1.tif  IMG_0011_2.tif  IMG_0011_3.tif  IMG_0011_4.tif  IMG_0011_5.tif  (+5 more)
test_pics/0012SET/000/: IMG_0008_1.tif  IMG_0008_2.tif  IMG_0008_3.tif  IMG_0008_4.tif  IMG_0008_5.tif  (+5 more)
